@@ -114,8 +114,8 @@ log_dir {
 }
 
 log_file_mode {
-  desc "Specifies the file permissions to use for newly created application log files. The specified mode will be combined with the process's file mode creation mask, or umask, which is generally 022.";
-  param String [mode] "The file mode to use, interpreted as an octal number. Set this to `0644` to allow all users on the system to read log files." 0660;
+  desc "Specifies the file permissions to use for newly created application log files. Since Shiny Server v1.5.8, umask will be ignored; the mode will be applied via chmod.";
+  param String [mode] "The file mode to use, interpreted as an octal number. Set this to `0644` to allow all users on the system to read log files." 0640;
   at $ server location;
   maxcount 1;
 }
