@@ -69,7 +69,7 @@ function parseApplication(settings, locNode, provideDefaults){
     appSettings.preserveLogs = true;
   }
 
-  appSettings.logFileMode = 0o660;
+  appSettings.logFileMode = "640";
   let logFileModeNode = locNode.getOne('log_file_mode');
   if (logFileModeNode && logFileModeNode.values.mode) {
     appSettings.logFileMode = logFileModeNode.values.mode;
